--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,19 @@ html,
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Manrope', sans-serif;
+}
+
+article {
+    border-radius: 0.2em;
+    background-color: #e5e5e5;
+}
+
+.article-header {
+    padding: 1em;
+    width: 100%;
+}
+
+a {
+    text-decoration: none;
 }
